# rust-transfinite

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE-APACHE  README.md
.github/workflows/: ci.yml  publish.yml
benches/: ordinal_bench.rs
examples/: epsilon_zero.rs  exponentiation.rs  goodstein.rs  hydra.rs
src/: CLAUDE.md  builder.rs  cnfterm.rs  error.rs  lib.rs  main.rs  ordinal.rs
tests/: CLAUDE.md  comprehensive_tests.rs  error_tests.rs  property_tests.rs  real_example_tests.rs
