[package]
name = "transfinite"
version = "0.1.3"
edition = "2021"
authors = ["niarenaw"]
license = "MIT OR Apache-2.0"
description = "Transfinite ordinal arithmetic library supporting ordinals up to epsilon-zero (ε₀) using Cantor Normal Form"
readme = "README.md"
repository = "https://github.com/niarenaw/rust-transfinite"
documentation = "https://docs.rs/transfinite"
homepage = "https://github.com/niarenaw/rust-transfinite"
keywords = ["ordinal", "transfinite", "mathematics", "cantor", "ordinal-arithmetic"]
categories = ["mathematics", "algorithms", "no-std"]
rust-version = "1.70"

[dependencies]
num-traits = "0.2.19"
thiserror = "2.0.11"

[dev-dependencies]
proptest = "1.4"
