[package]
name = "transfinite"
version = "0.2.0"
edition = "2021"
authors = ["niarenaw"]
license = "MIT OR Apache-2.0"
description = "Transfinite ordinal arithmetic library supporting ordinals up to epsilon-zero (ε₀) using Cantor Normal Form"
readme = "README.md"
repository = "https://github.com/niarenaw/rust-transfinite"
documentation = "https://docs.rs/transfinite"
homepage = "https://github.com/niarenaw/rust-transfinite"
keywords = ["ordinal", "transfinite", "mathematics", "cantor", "ordinal-arithmetic"]
categories = ["mathematics", "algorithms"]
rust-version = "1.81"

[dependencies]
num-traits = "0.2.19"
thiserror = "2.0.11"

[dev-dependencies]
proptest = "1.4"
cargo-husky = { version = "1", default-features = false, features = ["precommit-hook", "run-cargo-fmt", "run-cargo-clippy"] }
